--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif,"Olympia";
 }
 @keyframes marquee {
   0% { transform: translateX(0%); }
@@ -30,4 +30,17 @@ body {
 
 .animate-marquee:hover {
   animation-play-state: paused;
+}
+@font-face {
+  font-family: "Aeonik";
+  src: url("/font/AeonikTRIAL-Medium.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@layer base {
+  .font-aeonik {
+    font-family: "Aeonik", sans-serif;
+  }
 }
